--- a/server/Makefile
+++ b/server/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -O2 -MMD -MP -Wall -std=gnu++11
 
 all: server
 
-server: main.o klient.o mapa.o marshal.o proces.o update.o util.o
+server: main.o klient.o marshal.o proces.o update.o util.o
 	$(LINK.cpp) $^ $(LDLIBS) -o $@
 
 streamtest: streamtest.o
