--- a/observer/Makefile
+++ b/observer/Makefile
@@ -3,7 +3,7 @@ SERVERDIR = ../server
 CXXFLAGS = -O2 -MMD -MP -Wall -I$(SERVERDIR) -std=gnu++11
 
 CXXFLAGS += $(shell sdl-config --cflags)
-LDLIBS += $(shell sdl-config --libs) -lSDL_ttf -lSDL_image
+LDLIBS += $(shell sdl-config --libs) -lSDL_ttf -lSDL_image -lSDL_gfx
 
 CLEAN = *.d *.o observer
 
